[package]
name = "esp-pbuf"
version = "0.1.0"
description = "safe bindings for esp-idf's pbuf api"
license = "MIT"
repository = "https://github.com/haileys/esp-pbuf"
edition = "2021"

[build-dependencies]
embuild = "0.31"

[dependencies]
esp-idf-sys = { version = "0.33", default-features = false, features = ["native"] }

[package.metadata.esp-idf-sys]
esp_idf_version = "v5.1"
